[package]
name = "safetydump"
version = "0.1.0"
authors = ["nt"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winapi = { version = "0.3", features = ["winbase", "winhttp", "heapapi"] }
sysinfo = "0.17"
base64 = "0.13.0"
